--- a/package.json
+++ b/package.json
@@ -15,5 +15,15 @@
   "bugs": {
     "url": "https://github.com/dxprog/lifelog/issues"
   },
-  "homepage": "https://github.com/dxprog/lifelog#readme"
+  "homepage": "https://github.com/dxprog/lifelog#readme",
+  "devDependencies": {
+    "@types/express": "^4.17.17"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "sqlite": "^4.2.0",
+    "sqlite3": "^5.1.6",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.4"
+  }
 }
