--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "The server and front-end application for LifeLog",
   "main": "index.js",
   "scripts": {
-    "start:server": "ts-node server/index.ts",
+    "start:server": "ts-node --project tsconfig.server.json server/index.ts",
+    "start:app": "webpack --mode development --watch",
+    "build": "rm -rf dist && webpack --mode production --progress",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,10 +20,31 @@
   },
   "homepage": "https://github.com/dxprog/lifelog#readme",
   "devDependencies": {
-    "@types/express": "^4.17.17"
+    "@babel/core": "^7.21.8",
+    "@babel/preset-env": "^7.21.5",
+    "@babel/preset-react": "^7.18.6",
+    "@types/express": "^4.17.17",
+    "@types/react": "^18.2.6",
+    "@types/react-dom": "^18.2.4",
+    "@types/react-router-dom": "^5.3.3",
+    "babel-loader": "^9.1.2",
+    "copy-webpack-plugin": "^11.0.0",
+    "css-loader": "^6.7.4",
+    "inline-source-map": "^0.6.2",
+    "mini-css-extract-plugin": "^2.7.6",
+    "node-sass": "^9.0.0",
+    "sass-loader": "^13.3.0",
+    "style-loader": "^3.3.3",
+    "ts-loader": "^9.4.3",
+    "tsconfig-paths-webpack-plugin": "^4.0.1",
+    "webpack": "^5.83.1",
+    "webpack-cli": "^5.1.1"
   },
   "dependencies": {
     "express": "^4.18.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.11.2",
     "sqlite": "^4.2.0",
     "sqlite3": "^5.1.6",
     "ts-node": "^10.9.1",
