--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,5 @@
 {
   "compilerOptions": {
-    "outDir": "dist/",
     "noImplicitAny": true,
     "target": "es2017",
     "declaration": true,
@@ -8,7 +7,12 @@
     "module": "commonjs",
     "typeRoots": [ "node_modules/@types" ],
     "experimentalDecorators": true,
-    "emitDecoratorMetadata": true
+    "emitDecoratorMetadata": true,
+    "baseUrl": ".",
+    "paths": {
+      "@server/*": ["./server/*"],
+      "@app/*": ["./app/*"]
+    }
   },
   "files": [
     "./server/index.ts"
