--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@babel/core": "^7.21.8",
     "@babel/preset-env": "^7.21.5",
     "@babel/preset-react": "^7.18.6",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
@@ -41,6 +42,7 @@
     "webpack-cli": "^5.1.1"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
