--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "sass-loader": "^13.3.0",
     "style-loader": "^3.3.3",
     "ts-loader": "^9.4.3",
+    "tsconfig-paths": "^4.2.0",
     "tsconfig-paths-webpack-plugin": "^4.0.1",
     "webpack": "^5.83.1",
     "webpack-cli": "^5.1.1"
