--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,13 +8,20 @@
     "typeRoots": [ "node_modules/@types" ],
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
+    "esModuleInterop": true,
     "baseUrl": ".",
     "paths": {
       "@server/*": ["./server/*"],
-      "@app/*": ["./app/*"]
+      "@app/*": ["./app/*"],
+      "@shared/*": ["./shared/*"]
     }
   },
   "files": [
     "./server/index.ts"
-  ]
+  ],
+  "ts-node": {
+    "require": [
+      "tsconfig-paths/register"
+    ]
+  }
 }
