--- a/package.json
+++ b/package.json
@@ -44,8 +44,12 @@
     "webpack-dev-server": "^4.15.0"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.6.1",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "framer-motion": "^10.12.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2",
