--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,14 +11,11 @@
     "esModuleInterop": true,
     "baseUrl": ".",
     "paths": {
-      "@server/*": ["./server/*"],
-      "@app/*": ["./app/*"],
-      "@shared/*": ["./shared/*"]
+      "@server/*": ["server/*"],
+      "@app/*": ["app/*"],
+      "@shared/*": ["shared/*"]
     }
   },
-  "files": [
-    "./server/index.ts"
-  ],
   "ts-node": {
     "require": [
       "tsconfig-paths/register"
