fixed app alias

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     "baseUrl": ".",
     "paths": {
       "@server/*": ["server/*"],
-      "@app/*": ["app/*"],
+      "@app/*": ["app/src/*"],
       "@shared/*": ["shared/*"]
     }
   },
