--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2",
+    "react-svg": "^16.1.15",
     "sqlite": "^4.2.0",
     "sqlite3": "^5.1.6",
     "ts-node": "^10.9.1",
