--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/react": "^18.2.6",
+    "@types/react-datepicker": "^4.11.2",
     "@types/react-dom": "^18.2.4",
     "@types/react-router-dom": "^5.3.3",
     "babel-loader": "^9.1.2",
@@ -51,6 +52,7 @@
     "express": "^4.18.2",
     "framer-motion": "^10.12.16",
     "react": "^18.2.0",
+    "react-datepicker": "^4.13.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2",
     "react-svg": "^16.1.15",
