--- a/package.json
+++ b/package.json
@@ -45,9 +45,9 @@
     "webpack-dev-server": "^4.15.0"
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.6.1",
-    "@emotion/react": "^11.11.0",
+    "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.13.5",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "framer-motion": "^10.12.16",
