--- a/package.json
+++ b/package.json
@@ -48,11 +48,12 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.13.5",
+    "@mui/x-date-pickers": "^6.7.0",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.8",
     "express": "^4.18.2",
     "framer-motion": "^10.12.16",
     "react": "^18.2.0",
-    "react-datepicker": "^4.13.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2",
     "react-svg": "^16.1.15",
